# SearchAlgorithm

./: A_star.cpp  A_star.h  AbstSearcher.h  Astar.cpp  Astar.h  BFS.cpp  BFS.h  BestFS.cpp  BestFS.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.cpp  DFS.h  FileCache.cpp  FileCache.h  FileCacheManager.cpp  FileCacheManager.h  MatrixProblem.cpp  MatrixProblem.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  OA.cpp  OA.h  Point.cpp  Point.h  README.md  Searchable.h  Searcher.h  Server.h  Solution.cpp  Solution.h  Solver.h  State.cpp  (+6 more)
matrix_result/: matrix10_Astar.txt  matrix10_bestFS.txt  matrix10_bfs.txt  matrix10_dfs.txt  matrix1_Astar.txt  matrix1_bfs.txt  matrix1_dfs.txt  matrix2_Astar.txt  matrix2_bestFS.txt  matrix2_bfs.txt  matrix2_dfs.txt  matrix3_Astar.txt  matrix3_bestFS.txt  matrix3_bfs.txt  matrix3_dfs.txt  matrix4_Astar.txt  matrix4_BFS.txt  matrix4_DFS.txt  matrix4_bestFS.txt  matrix5_Astar.txt  matrix5_bestFS.txt  matrix5_bfs.txt  matrix5_dfs.txt  matrix6_Astar.txt  matrix6_bestFS.txt  matrix6_bfs.txt  matrix6_dfs.txt  matrix7_Astar.txt  matrix7_bestFS.txt  matrix7_bfs.txt  matrix7_dfs.txt  matrix8_Astar.txt  matrix8_bestFS.txt  matrix8_bfs.txt  matrix8_dfs.txt  matrix9_Astar.txt  matrix9_bestFS.txt  matrix9_bfs.txt  matrix9_dfs.txt
